# openai-translator

./: .env.local  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  .prettierrc.js  CLIP-EXTENSIONS-CN.md  CLIP-EXTENSIONS.md  LICENSE  Makefile  README-CN.md  README.md  build-tauri.mjs  build.mjs  electron-esbuild.config.yaml  esbuild.main.config.ts  esbuild.renderer.config.ts  jest.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  typos.toml  vite-env.d.ts  vite.config.chromium.ts  vite.config.firefox.ts  vite.config.tauri.ts  vite.config.ts  vite.config.userscript.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature.yml
.github/workflows/: lint.yaml  playwright.yml  release.yaml  test-build.yaml  unit-test.yaml  winget.yml
clip-extensions/popclip/: Config.plist  openai-translator.sh
clip-extensions/snipdo/: openai-translator.json  openai-translator.ps1
docs/: chatglm-cn.md  chatglm.md  chatgpt-cn.md  chatgpt.md  kimi-cn.md  kimi.md
e2e/: basic.spec.ts  common.ts  fixtures.ts  hotkey.spec.ts  index.spec.ts  test.html  titlebar.spec.ts
public/: api.js  cld-min.js  generator.js  index.d.ts  index.ts  manifest.firefox.json  manifest.json  options.html  popup.html  privacy.html  rules.json  userscript.js
public/locales/en/: translation.json
public/locales/ja/: translation.json
public/locales/zh-Hans/: translation.json
public/locales/zh-Hant/: translation.json
scripts/: release.py
src/: background.ts  i18n.js  index.d.ts  openai-translator.lnk  options.tsx
src-safari/OpenAI Translator.xcodeproj/: project.pbxproj
src-safari/Shared (App)/: ViewController.swift
src-safari/Shared (App)/Base.lproj/: Main.html
src-safari/Shared (App)/Resources/: Script.js  Style.css
src-safari/Shared (Extension)/: SafariWebExtensionHandler.swift
src-safari/iOS (App)/: AppDelegate.swift  Info.plist  SceneDelegate.swift
src-safari/iOS (App)/Base.lproj/: LaunchScreen.storyboard
src-safari/macOS (App)/: AppDelegate.swift  Info.plist
src-safari/macOS (App)/Base.lproj/: Main.storyboard
src-tauri/: Cargo.toml  get-selected-text.applescript  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: backspace.applescript  copy.applescript  get-selected-text-by-ax.applescript  get-selected-text.applescript  left.applescript  paste.applescript  right.applescript  select-all.applescript
src-tauri/src/: config.rs  fetch.rs  hotkey.rs  lang.rs  main.rs  ocr.rs  tray.rs  utils.rs  window_ext.rs  windows.rs  writing.rs
src/background/: index.ts
src/browser-extension/: common.ts  enable-dev-hmr.ts  manifest.firefox.json  manifest.json  manifest.ts
src/browser-extension/background/: index.ts
src/browser-extension/content_script/: InnerContainer.tsx  TitleBar.tsx  consts.ts  index.tsx  utils.ts
src/browser-extension/options/: index.html  index.tsx
src/browser-extension/popup/: index.css  index.html  index.tsx
src/browser-extension/youglish/: youglish.html
src/common/: analysis.ts  arkose.ts  background-fetch.ts  constants.ts  db.ts  electron-polyfill.ts  geo-data.ts  geo.ts  i18n.d.ts  i18n.js  lang.ts  store.ts  subscribe.ts  tauri-polyfill.ts  token.ts  traditional-or-simplified.ts  translate.ts  tts.ts  types.ts  universal-fetch.ts  usehooks.ts  user-event.ts  userscript-polyfill.ts  utils.ts
src/common/__tests__/: translate.test.ts
src/common/anki/: anki-connect.js
src/common/arkose/: generator.d.ts  generator.js  index.ts  server.ts
src/common/background/: eventnames.ts  fetch.ts  local-storage.ts
src/common/components/: ActionForm.tsx  ActionManager.tsx  CodeBlock.tsx  CopyButton.tsx  DurationPicker.tsx  ErrorFallback.tsx  GlobalSuspense.tsx  IconPicker.tsx  IpLocationNotification.tsx  LogoWithText.tsx  Markdown.tsx  NumberInput.tsx  PopupCard.tsx  ProxyTester.tsx  RenderingFormatSelector.tsx  Settings.tsx  SpeakerIcon.tsx  SpeakerMotion.tsx  SpinnerIcon.tsx  TasksComponent.tsx  Toaster.tsx  Translator.tsx  Vocabulary.tsx
src/common/engines/: abstract-engine.ts  abstract-openai.ts  azure.ts  chatglm.ts  chatgpt .ts  chatgpt.ts  claude.ts  cohere.ts  deepseek.ts  gemini.ts  groq.ts  index.ts  interfaces.ts  kimi.ts  minimax.ts  moonshot.ts  ollama.ts  openai.ts
src/common/highlight-in-textarea/: index.css  index.ts
src/common/hooks/: global.ts  useCollectedWordTotal.ts  useCurrentThemeType.ts  useMemoWindow.ts  usePinned.ts  usePromotionNeverDisplay.ts  usePromotionShowed.ts  useSettings.ts  useTheme.ts  useThemeDetector.ts  useThemeType.ts
src/common/internal-services/: action.ts  arkoseToken.ts  arkoseTokenGenerator.d.ts  arkoseTokenGenerator.js  db.ts  vocabulary.ts  英语单词学习-1701148257500.json
src/common/lang/: data.ts  index.ts
src/common/polyfills/: electron.ts  tauri.ts  userscript.ts
src/common/services/: action.ts  arkoseToken.ts  encoding.ts  promotion.ts  prompts.json  proxy-fetch.ts  requesters.ts  stream-async-iterable.ts  vocabulary.ts
src/common/store/: setting.ts
src/common/tts/: edge-tts.ts  index.ts  types.ts
src/common/youglish/: widget.js  youglish.jsx
src/components/: ErrorFallback.tsx  IpLocationNotification.tsx  SpeakerMotion.tsx  Tooltip.tsx
src/components/Form/: form.ts  index.module.css  index.ts  item.tsx
src/content/: PopupCard.tsx  consts.ts  content_script.tsx  index.tsx  lang.ts  translate.ts  utils.ts
src/content_script/: PopupCard.tsx  Vocabulary.tsx  consts.ts  index.css  index.tsx  lang.ts  translate.ts  utils.ts  vocalulary.tsx
src/electron/main/: main.ts  preload.ts
src/electron/renderer/: App.tsx  index.html  index.tsx
src/options/: index.tsx
src/popup/: Settings.tsx  index.css  index.tsx  popup.tsx
src/tauri/: App.tsx  Window.tsx  action_manager.html  action_manager.tsx  bindings.ts  dummy.html  index.html  index.tsx  settings.html  settings.tsx  thumb.html  thumb.tsx  updater.html  updater.tsx  utils.ts
src/tauri/components/: Window.tsx
src/tauri/windows/: ActionManagerWindow.tsx  (+5 more)
webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
(+35 files in other folders)
