[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["clipboard-all", "dialog-message", "fs-read-dir", "fs-read-file", "fs-write-file", "global-shortcut-all", "notification-all", "shell-open", "system-tray", "updater", "window-all", "windows7-compat"] }
window-shadows = "0.2.1"
once_cell = "1.17.1"
clipboard = "0.5.0"
enigo = {git = "https://github.com/enigo-rs/enigo"}
mouse_position = "0.1.3"
rdev = "0.5.2"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", version = "0.1.0" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
cpuid = "0.1.1"
sysinfo = "0.28.3"
parking_lot = "0.12.1"
mouce = "0.2.41"
tauri-plugin-window-state = "0.1.0"
whatlang = "0.16.2"
arboard = "3.2.0"
tiny_http = "0.12.0"
text-diff = "0.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"
macos-accessibility-client = "0.0.1"
core-graphics = "0.22.3"

[target.'cfg(windows)'.dependencies]
windows = {version="0.44.0",features= ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
